k8s/05-self-discovery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-discovery-service-deployment
  namespace: mindnotes
  labels:
    app: self-discovery-service
spec:
  replicas: 1 # Start with 1, HPA will manage this later
  selector:
    matchLabels:
      app: self-discovery-service
  template:
    metadata:
      labels:
        app: self-discovery-service
    spec:
      containers:
      - name: self-discovery-service
        image: khushi2912/self-discovery-service:latest
        ports:
        - containerPort: 9091 # The port the app listens on INSIDE the container
        readinessProbe:
          httpGet:
            path: /actuator/health # Or just /actuator/health if simpler
            port: 9091
          initialDelaySeconds: 30 # Give time for Spring Boot to start
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health # Or just /actuator/health
            port: 9091
          initialDelaySeconds: 60
          periodSeconds: 15
          failureThreshold: 3
