k8s/10-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mindnotes
  labels:
    app: frontend
spec:
  replicas: 1 # Can also be scaled if needed
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kanang/frontend:latest # Replace with your image
        ports:
        - containerPort: 80 # Nginx listens on port 80 inside the container
        readinessProbe:
          httpGet:
            path: /index.html # Check if Nginx is serving the main file
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
