k8s/06-coping-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coping-with-crisis-service # Service name for internal communication/Ingress target
  namespace: mindnotes
  labels:
    app: coping-with-crisis-service
spec:
  ports:
  - port: 80 # Service listens on port 80 (or another port like 9090)
    targetPort: 9092 # Forward traffic to the container's port 9090
  selector:
    app: coping-with-crisis-service
  type: ClusterIP # Only reachable within the cluster or via Ingress
