k8s/10-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service # Service name for Ingress target
  namespace: mindnotes
  labels:
    app: frontend
spec:
  ports:
  - port: 80 # Service listens on port 80
    targetPort: 80 # Forward traffic to the container's port 80
  selector:
    app: frontend
  type: ClusterIP
